--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,14 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Utils -->
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.18.22</version>
+			<scope>provided</scope>
 		</dependency>
+
 
 	</dependencies>
 
