add deploy stages

--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 
 	<distributionManagement>
 		<snapshotRepository>
-			<id>nexus_spring</id>
+			<id>nexus</id>
 			<url>http://localhost:9001/repository/nexus_spring/</url>
 		</snapshotRepository>
 		<repository>
-			<id>nexusdeploymentrepo</id>
+			<id>nexus</id>
 			<url>http://localhost:9001/repository/nexus-spring-release/</url>
 		</repository>
 
